@@ -6,6 +6,7 @@ import java.awt.Font;
 import java.awt.GridLayout;
 import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
+import java.awt.event.MouseAdapter;
 import java.awt.event.MouseEvent;
 import java.awt.event.MouseListener;
 import java.util.ArrayList;
@@ -16,14 +17,18 @@ import java.util.Date;
 import java.util.LinkedList;
 
 import javax.swing.BorderFactory;
+import javax.swing.JComponent;
 import javax.swing.JLabel;
 import javax.swing.JOptionPane;
 import javax.swing.JPanel;
 import javax.swing.SwingConstants;
+import javax.swing.TransferHandler;
 import javax.swing.border.MatteBorder;
 
 import edu.iut.app.ApplicationSession;
 import edu.iut.app.ExamEvent;
+import edu.iut.app.Person;
+import edu.iut.gui.listeners.DayClickListener;
 import edu.iut.gui.listeners.HourClickListener;
 import edu.iut.gui.widget.agenda.AgendaPanelFactory.ActiveView;
 import edu.iut.gui.widget.agenda.WeekPanel.WeekDayNames;
@@ -42,6 +47,7 @@ public class DayPanel extends EventPanel {
 			daysLayout = new GridLayout(14,1);
 			this.setLayout(daysLayout);
 			day.setText(weekDayNames.toString() + " " + ApplicationSession.instance().getDateSelected().get(Calendar.DAY_OF_MONTH) + day.getText());
+			
 			JPanel dayPanel = new JPanel();
 				
 			dayPanel.setBackground(new Color(50,100,200));
@@ -51,7 +57,7 @@ public class DayPanel extends EventPanel {
 			day.setFont(new Font("Calibri",Font.PLAIN,20));
 				
 			dayPanel.add(day);
-				
+			dayPanel.addMouseListener(new DayClickListener(ApplicationSession.instance().getDateSelected().getTime()));	
 			this.add(dayPanel);
 			
 			
@@ -65,10 +71,33 @@ public class DayPanel extends EventPanel {
 				JLabel heure = new JLabel(new Integer(hi).toString(), SwingConstants.CENTER);
 				JLabel exam = new JLabel("", SwingConstants.CENTER);
 				
+				
+				
 				//Si il y a une soutenance à cette heure on l'affiche
 				LinkedList<ExamEvent> examDate = ApplicationSession.instance().getAgenda().meetCriteriaDateEqual(d);
 				if(!examDate.isEmpty()){
-					exam.setText(examDate.get(0).getStudent().getFirstname() + " " + examDate.get(0).getStudent().getLastname());
+					exam.setText(examDate.getFirst().getStudent().toString());
+					
+					//On affiche plus d'info si on est en mode DayView
+					if(activeView==ActiveView.DAY_VIEW){
+						exam.setText(ApplicationSession.instance().getString("student") 
+								+ " : " 
+								+ exam.getText()
+								+ " | "
+								+ ApplicationSession.instance().getString("jury") + " : ");
+						if(examDate.getFirst().getJury()!=null){
+							for(Person p : examDate.getFirst().getJury()){
+								exam.setText(exam.getText() + p.toString());
+								if (examDate.getFirst().getJury().lastIndexOf(p)!=examDate.getFirst().getJury().size()-1){
+									exam.setText(exam.getText()	+ " - ");
+								}
+								
+							}
+						}
+						
+					}
+							
+					
 				}
 				if(activeView==ActiveView.DAY_VIEW)hour.add(heure,BorderLayout.WEST);
 				hour.add(exam, BorderLayout.CENTER);
@@ -76,7 +105,10 @@ public class DayPanel extends EventPanel {
 				hour.setBackground(new Color(230,240,255));		
 				
 				//Je créer le listener
-				hour.addMouseListener(new HourClickListener(d, hour));
+				HourClickListener listener = new HourClickListener(d, hour);
+				exam.addMouseListener(listener);
+				exam.addMouseMotionListener(listener);
+				exam.setTransferHandler(listener);
 				this.add(hour);
 			}
 			break;
@@ -113,6 +145,7 @@ public class DayPanel extends EventPanel {
 			hour.setBackground(new Color(230,240,255));
 			
 			hour.add(day);
+			//hour.addMouseListener(new DayClickListener(ApplicationSession.instance().getDateSelected().getTime()));
 			ApplicationSession.instance().getDateSelected().add(Calendar.DAY_OF_MONTH, 1);
 			this.add(hour);
 		
